Fixed bug #25814 (Make flock() return correct value when 3rd argument is used).

# This bug is 4.3.X specific, no need to MFB into 5.X tree.